--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Simple Calculator</string>
     <string name="add">Add</string>
+    <string name="sub">Subtract</string>
+    <string name="prod">Multiply</string>
+    <string name="div">Divide</string>
     <string name="enter_hint">Enter a number</string>
 </resources>
