add more operation buttons and clea button. changed input type for editTexts to number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="prod">Multiply</string>
     <string name="div">Divide</string>
     <string name="enter_hint">Enter a number</string>
+    <string name="noZero">You cant divide by Zero silly goose</string>
+    <string name="clr">Clear</string>
+    <string name="answer">The answer will be here</string>
 </resources>
